# pygame-library

./: .gitignore  AGENTS.md  pyproject.toml
games/orbital_rescue/: TODO.md  constants.py  figure_eight_data.py  game.py  geometry.py  levels.py  main.py  physics.py  precompute_figure_eight.py  render.py
